--- a/Tech/Prime.html
+++ b/Tech/Prime.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-
-
-<html>
-    <head>
-
-    </head>
-    <body>
-        Hello World!
-    </body>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prime Checker</title>
+</head>
+<body>
+    <h1>Prime Number Checker</h1>
+    <form action="check_prime.py" method="get">
+        <label for="number">Enter an integer:</label>
+        <input type="text" id="number" name="number" required>
+        <button type="submit">Check</button>
+    </form>
+</body>
 </html>
